library/src/usr/include/russ/russ.h

#define RUSS_CONN_NFDS		32
#define RUSS_CONN_STD_NFDS	3
#define RUSS_CONN_FD_STDIN	0
#define RUSS_CONN_FD_STDOUT	1
#define RUSS_CONN_FD_STDERR	2
#define RUSS_CONN_NSYSFDS	1
#define RUSS_CONN_MAX_NFDS	( RUSS__MAX(RUSS_CONN_NFDS, RUSS_CONN_NSYSFDS) )
#define RUSS_DEADLINE_NEVER	INT64_MAX
/* common exit status values */
#define RUSS_EXIT_SUCCESS	0
#define RUSS_EXIT_FAILURE	1
#define RUSS_EXIT_CALLFAILURE	126
#define RUSS_EXIT_SYSFAILURE	127
/* common messages */
#define RUSS_MSG_BADARGS	"error: bad/missing arguments"
#define RUSS_MSG_BADOP		"error: operation unsupported by service"
#define RUSS_MSG_NODIAL		"error: cannot dial service"
#define RUSS_MSG_NOEXIT		"error: no exit status"
#define RUSS_MSG_NOLIST		"info: list not available"
#define RUSS_MSG_NOSERVICE	"error: no service"
#define RUSS_MSG_NOSWITCHUSER	"error: service cannot switch user"
#define RUSS_MSG_UNDEFSERVICE	"warning: undefined service"
#define RUSS_OPNUM_NOTSET	0
#define RUSS_OPNUM_EXTENSION	1
#define RUSS_OPNUM_EXECUTE	2
#define RUSS_OPNUM_HELP		3
#define RUSS_OPNUM_ID		4
#define RUSS_OPNUM_INFO		5
#define RUSS_OPNUM_LIST		6
/* request */
#define RUSS_REQ_ARGS_MAX	1024
#define RUSS_REQ_ATTRS_MAX	1024
#define RUSS_REQ_SPATH_MAX	8192
#define RUSS_REQ_PROTOCOLSTRING	"0010"
/* svr */
#define RUSS_SVR_LIS_SD_DEFAULT	3
#define RUSS_SVR_TIMEOUT_ACCEPT	INT_MAX
#define RUSS_SVR_TIMEOUT_AWAIT	15000
#define RUSS_SVR_TYPE_FORK	1
#define RUSS_SVR_TYPE_THREAD	2
#define RUSS_WAIT_UNSET		1
#define RUSS_WAIT_OK		0
#define RUSS_WAIT_FAILURE	-1
#define RUSS_WAIT_BADFD		-2
#define RUSS_WAIT_TIMEOUT	-3
typedef uint32_t	russ_opnum;
/**
* Buffer object.
*/
struct russ_buf {
	char	*data;
	int	cap;
	int	len;
	int	off;
};
/**
* optable object.
*/
struct russ_optable {
	const char	*str;
	russ_opnum	num;
};
/**
* Request object.
*/
struct russ_req {
	char		*protocolstring;	/**< identifies russ protocol */
	char		*op;		/**< operation string */
	russ_opnum	opnum;		/**< operation number*/
	char		*spath;		/**< service path */
	char		**attrv;	/**< NULL-terminated array of attributes (as name=value strings) */
	char		**argv;		/**< NULL-terminated array of args */
};
/**
* Client connection object.
*/
struct russ_cconn {
	int			sd;		/**< socket descriptor */
	int			fds[RUSS_CONN_NFDS];		/**< array of fds */
	int			sysfds[RUSS_CONN_NSYSFDS];	/**< array of system fds */
	int			nevbuf;		/**< number of bytes read into evbuf */
	char			evbuf[4];	/**< buffer for exit status */
};
struct russ_sconn {
	struct russ_creds	creds;		/**< credentials */
	int			sd;		/**< socket descriptor */
	int			fds[RUSS_CONN_NFDS];		/**< array of fds */
	int			sysfds[RUSS_CONN_NSYSFDS];	/**< array of system fds */
};
typedef void (*russ_svchandler)(struct russ_sess *);
typedef int64_t russ_deadline;
/**
* Service node object.
*/
struct russ_svcnode {
	russ_svchandler		handler;
	char			*name;
	struct russ_svcnode	*next;
	struct russ_svcnode	*children;
	int			autoanswer;
	int			virtual;
	int			wildcard;
};
/**
* Server object.
*/
struct russ_svr {
	struct russ_svcnode	*root;
	int			type;
	pid_t			mpid;
	long			ctime;
	char			*saddr;
	int			lisd;
	int			closeonaccept;
	russ_accepthandler	accepthandler;
	int			accepttimeout;
	russ_answerhandler	answerhandler;
	int			awaittimeout;
	int			autoswitchuser;
	char			*help;
};
int russ_buf_init(struct russ_buf *, char *, int, int);
struct russ_buf *russ_buf_new(int);
struct russ_buf *russ_buf_free(struct russ_buf *);
int russ_buf_set(struct russ_buf *, char *buf, int count);
/* cconn.c */
struct russ_cconn *russ_cconn_free(struct russ_cconn *);
void russ_cconn_close(struct russ_cconn *);
void russ_cconn_close_fd(struct russ_cconn *, int);
int russ_cconn_wait(struct russ_cconn *, russ_deadline, int *);
struct russ_cconn *russ_dialv(russ_deadline, const char *, const char *, char **, char **);
int russ_dialv_wait(russ_deadline, const char *, const char *, char **, char **, int *);
int russ_dialv_wait_inouterr3(russ_deadline, const char *, const char *, char **, char **, int *, struct russ_buf *, struct russ_buf *, struct russ_buf *);
int russ_write_exit(int, int);
russ_opnum russ_optable_find_opnum(struct russ_optable *, const char *);
/* sconn.c */
struct russ_sconn *russ_sconn_free(struct russ_sconn *);
struct russ_sconn *russ_sconn_accept(russ_deadline, int);
int russ_sconn_answer(struct russ_sconn *, int, int *);
struct russ_req *russ_sconn_await_req(struct russ_sconn *, russ_deadline);
void russ_sconn_close(struct russ_sconn *);
void russ_sconn_close_fd(struct russ_sconn *, int);
int russ_sconn_exit(struct russ_sconn *, int);
int russ_sconn_fatal(struct russ_sconn *, const char *, int);
int russ_sconn_redialandsplice(struct russ_sconn *, russ_deadline, struct russ_req *);
int russ_sconn_send_fds(struct russ_sconn *, int, int *);
int russ_sconn_splice(struct russ_sconn *, struct russ_cconn *);
int russ_unlink(const char *);
/* svcnode.c */
struct russ_svcnode *russ_svcnode_new(const char *, russ_svchandler);
struct russ_svcnode *russ_svcnode_free(struct russ_svcnode *);
struct russ_svcnode *russ_svcnode_add(struct russ_svcnode *, const char *, russ_svchandler);
struct russ_svcnode *russ_svcnode_find(struct russ_svcnode *, const char *, char *, int);
int russ_svcnode_set_virtual(struct russ_svcnode *, int);
int russ_svcnode_set_wildcard(struct russ_svcnode *, int);
/* svr.c */
struct russ_svr *russ_svr_new(struct russ_svcnode *, int, int);
struct russ_sconn *russ_svr_accept(struct russ_svr *, russ_deadline);
void russ_svr_handler(struct russ_svr *, struct russ_sconn *);
int russ_svr_set_autoswitchuser(struct russ_svr *, int);
int russ_svr_set_help(struct russ_svr *, const char *);
/* user.c */
int russ_switch_user(uid_t, gid_t, int, gid_t *);